[package]
name = "solana-dex-parser"
version = "0.1.0"
edition = "2021"

[features]
default = ["protocol-simple"]
protocol-simple = []
cli = ["clap", "serde_json"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
solana-sdk = "1.18"
solana-transaction-status = "1.18"
spl-token = { version = "4.0", default-features = false, features = ["no-entrypoint"] }
thiserror = "1.0"
tracing = "0.1"
once_cell = "1.19"
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
insta = { version = "1.39", features = ["yaml"] }

[[bin]]
name = "dexp"
path = "src/bin/dexp.rs"
required-features = ["cli"]
